aredn-dmrhub/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: aredn-dmrhub
  namespace: aredn-dmrhub
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-dmrhub
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dmrhub
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 172.17.0.0/12
    - ipBlock:
        cidr: 172.18.0.0/12
    - ipBlock:
        cidr: 172.27.1.0/24
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: dmrhub
    - ipBlock:
        cidr: 18.189.227.206/32
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: 172.16.0.0/12
    - ipBlock:
        cidr: 172.17.0.0/12
    - ipBlock:
        cidr: 172.18.0.0/12
    - ipBlock:
        cidr: 172.27.1.0/24
